fixing the big pictures on mobile phones problem

--- a/docs/fa_IR/style.css
+++ b/docs/fa_IR/style.css
@@ -17,7 +17,7 @@ body {
 
 .part-pic {
     border-radius: 30px;
-    min-height: 36vh;
+    /* min-height: 36vh; */
     max-width: 100%;
 }
 
